--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,2 +1,6 @@
 <h1>Hello World</h1>
 <p>See Me in views/static/index.html.erb</p>
+
+
+<a href="/login">Login</a>
+<a href="/signup">Sign up now!</a>
