completed signup, login/logout

--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,3 +1,5 @@
 <p>Welcome, <%= @user.name %>!</p>
 
-<input type=submit value="Logout" action="/logout" method="post">
+<form action="/logout" method="post">
+<input type=submit value="Logout">
+</form>
